about and experience section

--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>JerwynPersonalWebsite</title>
-    <base href="/" />
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css" integrity="sha384-5Ow7w8jQgzi3qV7b4KFcxq4p7AqX6r20SaVRt1l3l4K7tq0Gt/0AiR2WGzj1KC/" crossorigin="anonymous">
+  <meta charset="utf-8" />
+  <title>JerwynPersonalWebsite</title>
+  <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
   <body>
     <app-root>Loading...</app-root>
   </body>
