--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css" integrity="sha384-5Ow7w8jQgzi3qV7b4KFcxq4p7AqX6r20SaVRt1l3l4K7tq0Gt/0AiR2WGzj1KC/" crossorigin="anonymous">
   <meta charset="utf-8" />
-  <title>JerwynPersonalWebsite</title>
+  <title>Jerwyn Alqueza</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
