--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -3,11 +3,15 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css" integrity="sha384-5Ow7w8jQgzi3qV7b4KFcxq4p7AqX6r20SaVRt1l3l4K7tq0Gt/0AiR2WGzj1KC/" crossorigin="anonymous">
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jerwyn Alqueza</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.1/js/bootstrap.min.js"></script>
 </head>
   <body>
     <app-root>Loading...</app-root>
