--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a href="https://github.com/jalqueza/JerwynPersonalWebsite/blob/24229324b4d9d3e470f3fca6274c83b4aeac3b0e/surface-pro-4-user-guide-EN.pdf" download="example.pdf">Download PDF</a>
+<a href="https://drive.google.com/uc?export=download&id=1lqncGq-93Q_e5grKBLiV1d2wHDMue6lN" download="example.pdf">Download PDF</a>
 
 </body>
 </html>
